syntax = "proto3";

package exam.v1;

option go_package = "exam/v1;proto";

service MailHistoryService {
  rpc CreateMailHistory(CreateMailHistoryRequest) returns (CreateMailHistoryResponse);
  rpc UpdateMailHistory(UpdateMailHistoryRequest) returns (UpdateMailHistoryResponse);
  rpc DeleteMailHistory(DeleteMailHistoryRequest) returns (DeleteMailHistoryResponse);
  rpc GetMailHistory(GetMailHistoryRequest) returns (GetMailHistoryResponse);
  rpc GetAllMailHistory(GetAllMailHistoryRequest) returns (GetAllMailHistoryResponse);
}

message CreateMailHistoryRequest {
  string template_id = 1;
  string subject = 2;
  string body = 3;
  repeated string tos = 5;
  map<string, string> data = 6;
  string email_provider = 7;
  string created_by = 8;
  string created_at = 9;
}

message MailHistory {
  string id = 1;
  string template_id = 2;
  string subject = 3;
  string body = 4;
  repeated string tos = 6;
  map<string, string> data = 7;
  string email_provider = 8;
  string created_by = 9;
  string created_at = 10;
  string updated_at = 11;
}

message CreateMailHistoryResponse {
  string message = 1;
  MailHistory mail_history = 2;
}

message UpdateMailHistoryRequest {
  string id = 1;
  string template_id = 2;
  string subject = 3;
  string body = 4;
  string to = 5;
  repeated string tos = 6;
  map<string, string> data = 7;
  string email_provider = 8;
}

message UpdateMailHistoryResponse {
  string message = 1;
  MailHistory mail_history = 2;
}

message DeleteMailHistoryRequest {
  string id = 1;
}

message DeleteMailHistoryResponse {
  string message = 1;
}

message GetMailHistoryRequest {
  string id = 1;
}

message GetMailHistoryResponse {
  string message = 1;
  MailHistory mail_history = 2;
}

message GetAllMailHistoryRequest {
  string page = 1;
  string limit = 2;
  string search = 3;
  string sort = 4;
  string order = 5;
  string template_id = 6;
  string to = 7;
  string email_provider = 8;
  string created_by = 9;
  string created_at = 10;
  string updated_at = 11;
}

message GetAllMailHistoryResponse {
  string message = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  repeated MailHistory mail_histories = 5;
}
